// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile Company Do snapshot with all elemnt  1`] = `
<table>
  <MobileClient
    info={
      Object {
        "balance": 200,
        "id": 101,
        "nameClient": "Иван",
        "secondNameClient": "Сергеевич",
        "serNameClient": "Краснов",
      }
    }
    key="101"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Иван
        </th>
        <th
          key="serNameClient"
        >
          Краснов
        </th>
        <th
          key="secondNameClient"
        >
          Сергеевич
        </th>
        <th
          key="balance"
        >
          200
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
  <MobileClient
    info={
      Object {
        "balance": 250,
        "id": 105,
        "nameClient": "Сергей",
        "secondNameClient": "Владимирович",
        "serNameClient": "Зайцев",
      }
    }
    key="105"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Сергей
        </th>
        <th
          key="serNameClient"
        >
          Зайцев
        </th>
        <th
          key="secondNameClient"
        >
          Владимирович
        </th>
        <th
          key="balance"
        >
          250
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
  <MobileClient
    info={
      Object {
        "balance": -10,
        "id": 1215,
        "nameClient": "Мария",
        "secondNameClient": "Александровна",
        "serNameClient": "Иванова",
      }
    }
    key="1215"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Мария
        </th>
        <th
          key="serNameClient"
        >
          Иванова
        </th>
        <th
          key="secondNameClient"
        >
          Александровна
        </th>
        <th
          key="balance"
        >
          -10
        </th>
        <th
          className="blocked_client"
          key="status"
        >
          blocked_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
  <MobileClient
    info={
      Object {
        "balance": 50,
        "id": 589,
        "nameClient": "Борис",
        "secondNameClient": "Геннадьевич",
        "serNameClient": "Смирнов",
      }
    }
    key="589"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Борис
        </th>
        <th
          key="serNameClient"
        >
          Смирнов
        </th>
        <th
          key="secondNameClient"
        >
          Геннадьевич
        </th>
        <th
          key="balance"
        >
          50
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
</table>
`;

exports[`Mobile Company check input 'Активные '  1`] = `
<table>
  <MobileClient
    info={
      Object {
        "balance": 200,
        "id": 101,
        "nameClient": "Иван",
        "secondNameClient": "Сергеевич",
        "serNameClient": "Краснов",
      }
    }
    key="101"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Иван
        </th>
        <th
          key="serNameClient"
        >
          Краснов
        </th>
        <th
          key="secondNameClient"
        >
          Сергеевич
        </th>
        <th
          key="balance"
        >
          200
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
  <MobileClient
    info={
      Object {
        "balance": 250,
        "id": 105,
        "nameClient": "Сергей",
        "secondNameClient": "Владимирович",
        "serNameClient": "Зайцев",
      }
    }
    key="105"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Сергей
        </th>
        <th
          key="serNameClient"
        >
          Зайцев
        </th>
        <th
          key="secondNameClient"
        >
          Владимирович
        </th>
        <th
          key="balance"
        >
          250
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
  <MobileClient
    info={
      Object {
        "balance": 50,
        "id": 589,
        "nameClient": "Борис",
        "secondNameClient": "Геннадьевич",
        "serNameClient": "Смирнов",
      }
    }
    key="589"
  >
    <tbody>
      <tr>
        <th
          key="nameClient"
        >
          Борис
        </th>
        <th
          key="serNameClient"
        >
          Смирнов
        </th>
        <th
          key="secondNameClient"
        >
          Геннадьевич
        </th>
        <th
          key="balance"
        >
          50
        </th>
        <th
          className="active_client"
          key="status"
        >
          active_client
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Редактировть"
          />
        </th>
        <th>
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </th>
      </tr>
    </tbody>
  </MobileClient>
</table>
`;

exports[`Test MobileClient MobileClient with render  1`] = `
<tbody>
  <tr>
    <th>
      Борис
    </th>
    <th>
      Смирнов
    </th>
    <th>
      Геннадьевич
    </th>
    <th>
      50
    </th>
    <th
      class="active_client"
    >
      active_client
    </th>
    <th>
      <input
        type="button"
        value="Редактировть"
      />
    </th>
    <th>
      <input
        type="button"
        value="Удалить"
      />
    </th>
  </tr>
</tbody>
`;

exports[`Test MobileClient MobileClient with renderer.create  1`] = `
<tbody>
  <tr>
    <th>
      Борис
    </th>
    <th>
      Смирнов
    </th>
    <th>
      Геннадьевич
    </th>
    <th>
      50
    </th>
    <th
      className="active_client"
    >
      active_client
    </th>
    <th>
      <input
        onClick={[Function]}
        type="button"
        value="Редактировть"
      />
    </th>
    <th>
      <input
        onClick={[Function]}
        type="button"
        value="Удалить"
      />
    </th>
  </tr>
</tbody>
`;

exports[`Test MobileClient with shallow 1`] = `
<tbody>
  <tr>
    <th
      key="nameClient"
    >
      Борис
    </th>
    <th
      key="serNameClient"
    >
      Смирнов
    </th>
    <th
      key="secondNameClient"
    >
      Геннадьевич
    </th>
    <th
      key="balance"
    >
      50
    </th>
    <th
      className="active_client"
      key="status"
    >
      active_client
    </th>
    <th>
      <input
        onClick={[Function]}
        type="button"
        value="Редактировть"
      />
    </th>
    <th>
      <input
        onClick={[Function]}
        type="button"
        value="Удалить"
      />
    </th>
  </tr>
</tbody>
`;
